--- a/index.css
+++ b/index.css
@@ -103,6 +103,9 @@ section ul li:before {
     background-color: #fff;
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    animation-name: slideLeft;
+    animation-duration: 1s;
+    animation-timing-function: ease-out;
 }
 
 /* Pricing plans */
@@ -195,7 +198,9 @@ section ul li:before {
     }
 
     .plan {
-        width: calc(50% - 40px);
+        display: flex;
+        flex-direction: column;
+        width: calc(50% + 40%);
         margin: 15px;
     }
 
@@ -207,9 +212,24 @@ section ul li:before {
 
     .testimonial {
         padding: 15px;
+        animation-name: slideLeft;
+        animation-duration: 1s;
+        animation-timing-function: ease-out;
     }
 }
 
 .Content-head{
     color: #1976d2;
+}
+
+
+@keyframes slideLeft {
+    0% {
+        transform: translateX(-100%);
+        opacity: 0;
+    }
+    100% {
+        transform: translateX(0);
+        opacity: 1;
+    }
 }
